--- a/src/styles.css
+++ b/src/styles.css
@@ -1,12 +1,19 @@
 :root {
-  --step--2: clamp(0.6944rem, 0.6577rem + 0.1836vw, 0.8rem);
-  --step--1: clamp(0.8333rem, 0.7754rem + 0.2899vw, 1rem);
-  --step-0: clamp(1rem, 0.913rem + 0.4348vw, 1.25rem);
-  --step-1: clamp(1.2rem, 1.0739rem + 0.6304vw, 1.5625rem);
-  --step-2: clamp(1.44rem, 1.2615rem + 0.8924vw, 1.9531rem);
-  --step-3: clamp(1.728rem, 1.4799rem + 1.2407vw, 2.4414rem);
-  --step-4: clamp(2.0736rem, 1.7334rem + 1.7011vw, 3.0518rem);
-  --step-5: clamp(2.4883rem, 2.027rem + 2.3067vw, 3.8147rem);
+  --step--2: clamp(0.6944rem, 0.6871rem + 0.0365vw, 0.72rem);
+  --step--1: clamp(0.8333rem, 0.8143rem + 0.0952vw, 0.9rem);
+  --step-0: clamp(1rem, 0.9643rem + 0.1786vw, 1.125rem);
+  --step-1: clamp(1.2rem, 1.1411rem + 0.2946vw, 1.4063rem);
+  --step-2: clamp(1.44rem, 1.3492rem + 0.454vw, 1.7578rem);
+  --step-3: clamp(1.728rem, 1.5939rem + 0.6704vw, 2.1973rem);
+  --step-4: clamp(2.0736rem, 1.8813rem + 0.9614vw, 2.7466rem);
+  --step-5: clamp(2.4883rem, 2.2183rem + 1.3499vw, 3.4332rem);
+
+  --clr-nav: #2c2c2c;
+  --clr-nav-hover: #3b3b3b;
+  --clr-font: #1a2b42;
+  --clr-nav-active: #85e0fc;
+  --clr-accent: #fc86a8;
+  --clr-bkg: #ededed;
 }
 
 html,
