--- a/src/styles.css
+++ b/src/styles.css
@@ -8,11 +8,15 @@
   --step-4: clamp(2.0736rem, 1.8813rem + 0.9614vw, 2.7466rem);
   --step-5: clamp(2.4883rem, 2.2183rem + 1.3499vw, 3.4332rem);
 
-  --clr-dark: #2c2c2c;
-  --clr-light-gray: #7e7e7e;
-  --clr-font: #1a2b42;
-  --clr-accent: #4fd1c5;
-  --clr-light: #ededed;
+  --clr-dark: #111827;
+  --clr-dark-secondary: #1F2937;
+  --clr-gray: #374151;
+  --clr-dark-gray: #2F3337;
+  --clr-accent: #34D399;
+  --clr-text-light: #F9FAFB;
+  --clr-text-muted: #9CA3AF;
+
+  --border-radius-default: 8px;
 }
 
 html,
@@ -22,8 +26,8 @@ body {
   min-height: 100vh;
   min-height: 100dvh;
   font-family: sans-serif;
-  background-color: var(--clr-light);
-  color: var(--clr-font);
+  background-color: var(--clr-dark-secondary);
+  color: var(--clr-text-light);
 }
 
 body {
